--- a/src/app/features/schema/schema.component.html
+++ b/src/app/features/schema/schema.component.html
@@ -1,5 +1,5 @@
 <div class="week_and_counter_bar">
-  <h1>Week 11 - 18 March 2018</h1>
+  <h1>Week {{currentDate | date:'ww - dd MMMM yyyy'}}</h1>
   <button mat-button (click)="getCounters()">Remaining Appointments</button>
 </div>
 
