--- a/src/app/features/settings/push-notifications/push-notifications.component.css
+++ b/src/app/features/settings/push-notifications/push-notifications.component.css
@@ -6,10 +6,13 @@
 }
 
 .messages {
-  height: 60px;
   padding-top: 30px;
 }
 
 .enable_wrap {
   white-space: normal;
+}
+
+.messages > button {
+  margin: 24px 0 16px 0;
 }
