--- a/src/app/features/admin/admin.component.css
+++ b/src/app/features/admin/admin.component.css
@@ -1,7 +1,3 @@
-div#users {
-  margin: 0 15px 25px 15px;
-}
-
 table {
   width: 100%;
   text-align: center;
@@ -11,4 +7,35 @@ table {
 
 table tr:nth-child(even) {
   background-color: #f1f1f1;
+}
+
+/* all text color to darkblue */
+#maintenances {
+  margin-top: 32px;
+  color: #2c3e50;
+}
+
+div.title {
+  padding: 25px;
+  background-color: rgba(0, 0, 0, 0.03);
+}
+
+div.title > h2 {
+  margin: 0;
+}
+
+mat-form-field {
+  width: 98%;
+}
+
+div.message {
+  padding: 20px 25px 5px;
+}
+
+div.action {
+  padding: 0 25px 30px;
+}
+
+div.action > button {
+  width: 100%;
 }
