add minor changes before meeting

--- a/src/app/features/settings/push-notifications/push-notifications.component.css
+++ b/src/app/features/settings/push-notifications/push-notifications.component.css
@@ -6,13 +6,9 @@
 }
 
 .messages {
-  padding-top: 30px;
+  padding: 30px 25px;
 }
 
 .enable_wrap {
   white-space: normal;
-}
-
-.messages > button {
-  margin: 24px 0 16px 0;
 }
