--- a/src/app/features/schema/room/room.component.html
+++ b/src/app/features/schema/room/room.component.html
@@ -67,14 +67,14 @@
         <div class="head">
           <div class="time_column_header">Time</div>
         </div>
-        <div *ngFor="let time of times" class="time_cell">{{time}}</div>
+        <div *ngFor="let time of dryerTimes" class="time_cell">{{time}}</div>
       </div>
       <div class="laundry_table">
         <div class="day_column" *ngFor="let day of days; let dayIndex = index">
           <div class="head">
             <div class="day_column_header">{{day.id | date: 'EEEE'}}</div>
           </div>
-          <div *ngFor="let time of times; let timeIndex = index" class="appointment_cell">
+          <div *ngFor="let time of dryerTimes; let timeIndex = index" class="appointment_cell">
             <app-appointment-button
               [isPositionedLeft]="true"
               [appointment]="{
