--- a/src/app/features/schema/schema.component.html
+++ b/src/app/features/schema/schema.component.html
@@ -1,6 +1,6 @@
 <div class="week_and_counter_bar">
   <h1>Week {{currentDate | date:'ww - dd MMMM yyyy'}}</h1>
-  <button mat-button (click)="getCounters()">Remaining Appointments</button>
+  <button mat-stroked-button (click)="getCounters()">Remaining Appointments</button>
 </div>
 
 <nav mat-tab-nav-bar class="demo-tab-group">
