--- a/src/app/features/notification-board/messages/messages.component.html
+++ b/src/app/features/notification-board/messages/messages.component.html
@@ -22,7 +22,7 @@
       <h3>{{message.title}}</h3>
       <div class="icon_actions">
         <button mat-icon-button
-                *ngIf="userData && (message.houseNumber === currentUser.displayName || userData.isAdmin)"
+                *ngIf="userData && (message.houseNumber === currentUser.displayName || userData.admin)"
                 (click)="removeMessage(message)">
           <mat-icon>delete</mat-icon>
         </button>
