--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,8 +17,8 @@
     <mat-sidenav #sidenav
                  [opened]="sideNavOpened"
                  [mode]="sideNavMode"
-                 class="sidenav_style">
-      <nav>
+                  class="mat_sidenav">
+      <nav class="sidenav">
         <mat-list>
           <mat-list-item>
             <a routerLinkActive #rla="routerLinkActive"
